--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angular": "^1.7.7",
     "async": "^2.6.2",
+    "body-parser": "latest",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "mongoose": "^5.4.16",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11",
-    "body-parser": "latest"
+    "pug": "^2.0.3"
   }
 }
