--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "angular": "^1.7.7",
     "async": "^2.6.2",
+    "bcrypt": "^3.0.4",
     "body-parser": "latest",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
