--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "async": "^2.6.2",
     "bcrypt": "^3.0.4",
     "body-parser": "latest",
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
